Added Admin View and better pack management
