# Frontend_CardDropper/src/app/models/pack-template-slot.model.ts
@@ -1,0 +1,6 @@
+export interface PackTemplateSlot {
+  id: number | null;
+  slotId: number;
+  slotName: string;
+  count: number;
+}
